--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@ body {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.gradient {
+    position:absolute;
+    width:100%;
+    height:auto;
+    background: rgba(0,0,0,0.5);
+}
+
 img {
     max-width:100%;
     height: auto;
