--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.gradient {
+.lapisan {
     position:absolute;
     width:100%;
     height:auto;
