--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    margin:0;
+    padding:0;
+}
+
 body {
     background: url("https://i.pinimg.com/originals/30/66/72/306672d478927020fb5ef9f3d667e43e.jpg");
     background-size: cover;
