--- a/style.css
+++ b/style.css
@@ -80,16 +80,20 @@ div.container img:hover {
     width:100%;
     height:200px;
     object-fit:cover;
-    border: 3px solid black;
-    box-shadow: 1px 2px 3px rgba(0,0,0,0.5);
-    border-radius:20px;
     box-sizing: border-box;
+    padding: 12px;
+    cursor:pointer;
+    border-radius: 10px;
+    transition: .5s ease;
 }
 
 div.gallery img:hover {
-    border: 2px solid khaki;
-    box-shadow: 0 10px 5px 2px #FFD700;
-}
+    color:aqua;
+    background: transparent;
+    border: 3px solid yellow;
+    box-shadow:0 0 10px 0 #799be6 inset,
+               0 0 10px 4px #799be6;
+    }
 
 
 .footer h2 {
@@ -131,5 +135,21 @@ div.gallery img:hover {
 
     .gallery img {
         height:170px;
+    }
+}
+
+@media (min-width:999px) {
+    .gallery {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .gallery img {
+        height:300px;
+        width: 500px;
+    }
+
+    .container img {
+        width:190px;
+        height:190px;
     }
 }
