--- a/style.css
+++ b/style.css
@@ -134,8 +134,8 @@ div.gallery img:hover {
     }
 
     .gallery img {
-         height:300px;
-         width:auto;
+         height:170px;
+         width:200px;
     }
 }
 
