--- a/style.css
+++ b/style.css
@@ -157,6 +157,10 @@ div.gallery img:hover {
     .gallery img {
        width: 100%;
     }
+     .container img {
+        width:130px;
+        height:120px;
+    }
 }
 
 @media (max-width:490px) {
