--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ div.container img:hover {
     width:100%;
     height:200px;
     object-fit:cover;
+    filter: grayscale(90%);
     box-sizing: border-box;
     padding: 12px;
     cursor:pointer;
@@ -93,6 +94,7 @@ div.gallery img:hover {
     border: 3px solid yellow;
     box-shadow:0 0 10px 0 #799be6 inset,
                0 0 10px 4px #799be6;
+    filter:grayscale(0);
     }
 
 
